--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "parkingsensor",
   "version": "1.0.0",
   "description": "Park 'N' Pay's backend communicating with the arduinos sensors and hosting it online.",
-  "main": "index.js",
+  "main": "app.js",
   "dependencies": {
     "express": "^4.16.4",
     "johnny-five": "^1.0.0"
